tests/snapshots/regression/nested__nested_lambdas_precedence.snap
---
source: tests/regression_snapshots.rs
---
$ flux --no-cache tests/fixtures/nested/nested_lambdas_precedence.flx
exit_code: 1

• 3 errors • tests/fixtures/nested/nested_lambdas_precedence.flx
error[E415]: Missing Main Function (strict)

Strict mode requires `fn main()` for all programs.

  tests/fixtures/nested/nested_lambdas_precedence.flx:1:1
  |
1 | let f = /x -> /y -> x + y * 2;
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
2 | print(f(1)(2));
  | ^^^^^^^^^^^^^^^

Hint:
  Add `fn main() { ... }` as the program entrypoint.


error[E413]: Top-Level Effect

Effectful operation is not allowed at top level (requires: IO).

  tests/fixtures/nested/nested_lambdas_precedence.flx:2:1
  |
2 | print(f(1)(2));
  | ^^^^^^^^^^^^^^^
  | --------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


error[E414]: Missing Main Function

Effectful program is missing `fn main` root effect handler.

  tests/fixtures/nested/nested_lambdas_precedence.flx:2:1
  |
2 | print(f(1)(2));
  | ^^^^^^^^^^^^^^^
  | --------------- effectful top-level execution

Hint:
  Define `fn main() with ... { ... }` and move execution there.

Found 3 errors.
